prevent the yoga stretch!

--- a/src/main/app/src/app/admin/parameters-edit-bpmn/parameters-edit-bpmn.component.less
+++ b/src/main/app/src/app/admin/parameters-edit-bpmn/parameters-edit-bpmn.component.less
@@ -50,3 +50,7 @@ mat-expansion-panel-header {
     max-width: 50%;
   }
 }
+
+:host ::ng-deep .mat-stepper-horizontal-line {
+  flex: 0 0 auto !important;
+}
